# S1_SDK

./: .gitignore  MUJOCO_LOG.TXT  README.md  pyproject.toml
doc/: kdl_install.md
examples/: MUJOCO_LOG.TXT  collision.py  gravity.py  keyborad_end_effect.py  keyborad_joint.py  read_pos.py  set_zero_position_gripper.py  set_zero_position_teach_gripper.py  teaching.py  teleop_demo.py
src/S1_SDK/: S1_arm.py  __init__.py  base_mode.py  only_real.py  only_sim.py  real_and_sim.py  real_control_sim.py  real_diff_sim.py
src/S1_SDK/hardware/: __init__.py  gravity.py  kdl_solver.py  motor.py  mujoco_sim.py
src/S1_SDK/hardware/com/: __init__.py  base_com.py  can_type.py  uart_type.py
src/S1_SDK/hardware/motors/: __init__.py  base_motor.py  damiao.py  hand.py
src/S1_SDK/resource/meshes/: gripper.xml  gripper_less.xml
